<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/background_material_dark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_title"
        android:id="@+id/titlebar"
        android:background="#59869b57"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/bright_foreground_material_dark"/>

    <!--  Enter Card Balance  -->
    <TextView
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:id="@+id/lblbalance"
        android:labelFor="@+id/txtbalance"
        android:layout_weight="0.04"
        android:layout_alignTop="@+id/txtbalance"
        android:layout_alignBottom="@+id/txtbalance"
        android:textColor="@color/bright_foreground_material_dark"
        android:paddingLeft="2dp"
        android:textAlignment="center"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtbalance"
        android:layout_gravity="right"
        android:layout_below="@+id/titlebar"
        android:layout_toEndOf="@+id/lblbalance"
        android:textColor="@color/txtcolor" />

    <!--  Enter Yearly Interest Rate  -->
    <TextView
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:text="@string/interest"
        android:id="@+id/lblinterest"
        android:labelFor="@+id/txtinterest"
        android:layout_weight="0.04"
        android:layout_alignTop="@+id/txtinterest"
        android:layout_alignBottom="@+id/txtinterest"
        android:textColor="@color/bright_foreground_material_dark"
        android:paddingLeft="2dp"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtinterest"
        android:layout_gravity="right"
        android:layout_below="@+id/txtbalance"
        android:layout_toEndOf="@+id/lblinterest"
        android:textColor="@color/txtcolor" />

    <!--  Enter Minimum Payment  -->
    <TextView
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:text="@string/minpayment"
        android:id="@+id/lblminpayment"
        android:labelFor="@+id/txtminpayment"
        android:layout_weight="0.04"
        android:layout_alignTop="@+id/txtminpayment"
        android:layout_alignBottom="@+id/txtminpayment"
        android:textColor="@color/bright_foreground_material_dark"
        android:paddingLeft="2dp"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtminpayment"
        android:layout_gravity="right"
        android:layout_below="@+id/txtinterest"
        android:layout_toEndOf="@+id/lblminpayment"
        android:textColor="@color/txtcolor" />

    <!--  Final Card Balance  -->
    <TextView
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:text="@string/finalbalance"
        android:id="@+id/lblfinalbalance"
        android:labelFor="@+id/txtfinalbalance"
        android:layout_weight="0.04"
        android:layout_alignTop="@+id/txtfinalbalance"
        android:layout_alignBottom="@+id/txtfinalbalance"
        android:textColor="@color/bright_foreground_material_dark"
        android:paddingLeft="2dp"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtfinalbalance"
        android:layout_gravity="right"
        android:layout_below="@+id/txtminpayment"
        android:layout_toEndOf="@+id/lblfinalbalance"
        android:textColor="@color/txtcolor" />


    <TextView
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:text="@string/remainingmonths"
        android:id="@+id/lblremmonths"
        android:labelFor="@+id/txtremmonths"
        android:layout_weight="0.04"
        android:layout_alignTop="@+id/txtremmonths"
        android:layout_alignBottom="@+id/txtremmonths"
        android:textColor="@color/bright_foreground_material_dark"
        android:paddingLeft="2dp"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtremmonths"
        android:layout_gravity="right"
        android:layout_below="@+id/txtfinalbalance"
        android:layout_toEndOf="@+id/lblremmonths"
        android:textColor="@color/txtcolor" />
    <TextView
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:text="@string/interestpaid"
        android:id="@+id/lblintpaid"
        android:labelFor="@+id/txtintpaid"
        android:layout_weight="0.04"
        android:layout_alignTop="@+id/txtintpaid"
        android:layout_alignBottom="@+id/txtintpaid"
        android:textColor="@color/bright_foreground_material_dark"
        android:paddingLeft="2dp"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtintpaid"
        android:layout_gravity="right"
        android:layout_below="@+id/txtremmonths"
        android:layout_toEndOf="@+id/lblintpaid"
        android:textColor="@color/txtcolor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/btnclear"
        android:layout_below="@+id/lblintpaid"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/txtintpaid"
        android:background="@android:drawable/btn_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compute"
        android:id="@+id/btncompute"
        android:layout_below="@+id/txtintpaid"
        android:layout_alignEnd="@+id/txtintpaid"
        android:layout_toEndOf="@+id/lblintpaid"
        android:background="@android:drawable/btn_default" />


</RelativeLayout>
